generally complete-ish documentation

--- a/_posts/2017-09-06-cad.md
+++ b/_posts/2017-09-06-cad.md
@@ -37,7 +37,7 @@ First, I did a quick hand-drawn sketch of the robot. The basic structure is a ro
 
 ![inkscape robot]({{ site.baseurl }}/assets/week-1/2d-model.png){: .small .right}
 
-Next, I translated my sketches into a simple Inkscape drawing. Here, it becomes clear that I have incedibly little knowledge of mechanics; I have no idea how the tracks will connected to the upper cover, where the motors will be placed, or how they'll be coupled to the tracks. But I did leave space in between the tracks for a Raspberry Pi Zero or other electronics to control the robot!
+Next, I translated my sketches into a simple Inkscape drawing. Here, it becomes clear that I have incredibly little knowledge of mechanics; I have no idea how the tracks will connected to the upper cover, where the motors will be placed, or how they'll be coupled to the tracks. But I did leave space in between the tracks for a Raspberry Pi Zero or other electronics to control the robot!
 
 I also made a better diagram of what the collective behavior entails (below). Robots on the bottom/lower layers will be slower (purple robots) and end of becoming "uncovered" at the back of the group, at which point they are unburdened by the robots on top of them and are able to start climbing of the back of the group (green robots). The robots on the top (light blue) use those below them as a moving walkway to reach the front and start descending (red). As they descend, they move slower and are eventually pulled under to the bottom layer.
 
